Al registrar un usuario se devuelve el Token Service y Controller de Member y Trainer actualizados Fix de Test